modif delay + header

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @theme {
   --color-primary: #30bf84;
   --color-primary-dark: #43e5a2;
-  --color-secondary: #A1A1A1;
+  --color-secondary: #878484;
   --color-secondary-dark: #c7c7c7;
   --color-menu-primary: #30bf84;
   --color-menu-primary-dark: #43e5a2;
